# urdf-spherizer

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/: lib.rs
src/urdf_spherizer/: __init__.py  _core.pyi  cli.py
